--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+spring.thymeleaf.cache=false
